--- a/021_malGeolgi.html
+++ b/021_malGeolgi.html
@@ -17,19 +17,14 @@
         <center>
             <img src="https://realworld.blob.core.windows.net/user-files/5NwAFYpqF_R-AlCbaUJZVw/22-02-17-06-01-28_2zAHGK1sv0s.png">
             <div class="clock">
-                (뒤에서 누군가 말을 걸어온다)
-                <br><br> 정신이 드니?
-                <br> 1학년으로 돌아온 기분이 어때?
-                <br><br> 만나서 반가워.
-                <br><br> 나는 우리 학교 시계탑에 사는
-                <br> 시계탑의 요정, 통일이라고 해.
-                <br><br> 면접에서 아깝게 떨어져서 상심이 크지?
-                <br><br> 슬퍼하고 있을 너를 위해
-                <br> 잠시 시간을 되돌려봤어.
-                <br><br> 나랑 같이 우리 학교의 역사를 탐험하고,
-                <br> 훌륭한 사람들에 대해 알아보고 나면
-                <br><br> 다음 면접에서는 자신 있게 설명할 수 있을거야!
-                <br><br> 이 여정이 끝나면 너를 면접 직전으로 다시 보내줄게~
+                신입생으로 돌아온 기분이 어때?
+                <br><br>나는 중앙시계탑에 사는 시계탑의 요정
+                <br>통일이라고 해.
+                <br><br>면접에 떨어져서 슬퍼하는 너를 위해서
+                <br>잠시 시간을 되돌려 봤어.
+                <br><br>나와 함께 우리 학교의 역사와
+                <br>동문들에 대해 알아보고
+                <br><br>면접에 다시 도전하는 거야!
                 <br>
             </div>
         </center>
@@ -59,6 +54,10 @@
         body {
             position: relative;
             user-select: none;
+        }
+        
+        center {
+            padding: 0% 5%;
         }
         
         .nanumGothic,
