--- a/temp.html
+++ b/temp.html
@@ -15,18 +15,12 @@
 <body>
     <div>
         <center>
-            <img src="https://realworld.blob.core.windows.net/user-files/5NwAFYpqF_R-AlCbaUJZVw/22-02-17-05-51-01_PXYzeIy-zOI.png">
-            <div class="horse">학교를 원망하는 도중에 댓글이 달렸다</div>
-            <br><br>
-            <div class="clock">'그렇지 않아. 우리 학교 출신인물 중에 위대한 사람들이 얼마나 많은데!'</div>
-            <br><br>
-            <div class="horse">나는 이 악물고 키보드를 두드리기 시작했다.</div>
-            <br><br>
-            <div class="horse">'뭐? 그런 사람들이 있는 줄은 꿈에도 몰랐네ㅋㅋㅋ
-                <br> 어디 한 번 들어나 보자'</div>
-            <br><br>
-            <div class="clock">어휴, 백문이 불여일견이라고
-                <br>직접 확인해보는 건 어때?</div>
+            <img src="https://realworld.blob.core.windows.net/user-files/5NwAFYpqF_R-AlCbaUJZVw/22-02-14-15-03-17_5RSIf2FCRNY.png" />
+            <p class="clock">
+                좋아!
+                <br><br> 먼저 우리 학교의 창학정신을 알아보자~
+                <br><br> 우리 학교 입구에 있는 커다란 바위가 힌트가 될 거야!
+            </p>
         </center>
     </div>
     <br />
